feat(ticket): implemented TicketDetails to return to client the Ticket with all metadata